--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ input[type=submit]{
     display:block;
     width:100px;
 }
-.match,.error{
+.match,.error,.sent{
     display:block;
     color:white;
     text-align:center;
@@ -52,9 +52,19 @@ input[type=submit]{
     padding:10px;
     box-sizing: border-box;
 }
-.match{
+.match,.sent{
     background:green;
 }
 .error{
     background:red;
 }
+.message{
+    background:cyan;
+    color:white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    padding:10px;
+    box-sizing: border-box;
+    margin:5px 0px;
+}
+    
